--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>ShopEase - Your One-Stop Shop</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link href="css/styles.css" rel="stylesheet"/>
+    <link href="css/responsive.css" rel="stylesheet"/>
     <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
     />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
+        <img alt="ShopEase Logo" class="logo" src="images/ShopEase-logo.svg"/>
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
-          <li class="nav-item"><a href="index.html" class="active">Home</a></li>
+          <li class="nav-item"><a class="active" href="index.html">Home</a></li>
           <li class="nav-item"><a href="pages/products.html">Products</a></li>
           <li class="nav-item">
             <a href="pages/categories.html">Categories</a>
@@ -47,7 +47,7 @@
       <div class="hero-content">
         <h1>Welcome to ShopEase</h1>
         <p>Find the best products at the best prices</p>
-        <a href="pages/products.html" class="cta-button">Shop Now</a>
+        <a class="cta-button" href="pages/products.html">Shop Now</a>
       </div>
     </section>
 
@@ -58,8 +58,8 @@
         <div class="product-card">
           <div class="product-image">
             <img
-              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Product 1"
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             />
             <div class="product-tag">Sale</div>
           </div>
@@ -92,8 +92,8 @@
         <div class="product-card">
           <div class="product-image">
             <img
+                    alt="Product 2"
               src="https://images.unsplash.com/photo-1696688713460-de12ac76ebc6?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Product 2"
             />
           </div>
           <div class="product-details">
@@ -124,8 +124,8 @@
         <div class="product-card">
           <div class="product-image">
             <img
-              src="https://images.unsplash.com/photo-1675319245480-215961c129f1?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Product 3"
+              src="https://images.unsplash.com/photo-1675319245480-215961c129f1?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             />
             <div class="product-tag">New</div>
           </div>
@@ -157,8 +157,8 @@
         <div class="product-card">
           <div class="product-image">
             <img
+                    alt="Product 4"
               src="https://images.unsplash.com/photo-1622560481979-f5b0174242a0?q=80&w=2788&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Product 4"
             />
           </div>
           <div class="product-details">
@@ -192,41 +192,41 @@
       <div class="category-grid">
         <div class="category-card">
           <img
-            src="https://images.unsplash.com/photo-1515940175183-6798529cb860?q=80&w=2829&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="Electronics Category"
+            src="https://images.unsplash.com/photo-1515940175183-6798529cb860?q=80&w=2829&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           />
           <h3>Electronics</h3>
-          <a href="pages/categories.html#electronics" class="category-link"
+          <a class="category-link" href="pages/categories.html#electronics"
             >View All</a
           >
         </div>
         <div class="category-card">
           <img
+                  alt="Clothing Category"
             src="https://images.unsplash.com/photo-1666358052008-a9a1ecda7885?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Clothing Category"
           />
           <h3>Clothing</h3>
-          <a href="pages/categories.html#clothing" class="category-link"
+          <a class="category-link" href="pages/categories.html#clothing"
             >View All</a
           >
         </div>
         <div class="category-card">
           <img
-            src="https://cdn.pixabay.com/photo/2021/12/22/02/56/interior-6886565_1280.jpg"
             alt="Home & Kitchen Category"
+            src="https://cdn.pixabay.com/photo/2021/12/22/02/56/interior-6886565_1280.jpg"
           />
           <h3>Home & Kitchen</h3>
-          <a href="pages/categories.html#home" class="category-link"
+          <a class="category-link" href="pages/categories.html#home"
             >View All</a
           >
         </div>
         <div class="category-card">
           <img
+                  alt="Sports & Outdoors Category"
             src="https://images.unsplash.com/photo-1642326828805-0d3251cc250f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Sports & Outdoors Category"
           />
           <h3>Sports & Outdoors</h3>
-          <a href="pages/categories.html#sports" class="category-link"
+          <a class="category-link" href="pages/categories.html#sports"
             >View All</a
           >
         </div>
@@ -238,11 +238,11 @@
         <h2>Subscribe to Our Newsletter</h2>
         <p>Get updates on new products, special offers, and more.</p>
         <form id="newsletter-form">
-          <input
-            type="email"
+          <label for="newsletter-email"></label><input
+                id="newsletter-email"
             placeholder="Enter your email"
             required
-            id="newsletter-email"
+                type="email"
           />
           <button type="submit">Subscribe</button>
         </form>
